--- a/css/main.css
+++ b/css/main.css
@@ -15,19 +15,19 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-    background-image: url('../images/parallax1.jpg');
+    background-image: url('../images/rosa_mistica.jpeg');
     min-height: 100%;
 }
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-    background-image: url("../images/parallax2.jpg");
+    background-image: url("../images/marcas.jpeg");
     min-height: 400px;
 }
 
 /* Third image (Contact) */
 .bgimg-3 {
-    background-image: url("../images/parallax3.jpg");
+    background-image: url("../images/contato.jpeg");
     min-height: 400px;
 }
 
@@ -39,4 +39,8 @@ body, html {
     .bgimg-1, .bgimg-2, .bgimg-3 {
         background-attachment: scroll;
     }
+}
+
+.pink,.hover-pink:hover {
+    background-color:#F9BBD0!important
 }
