Add Contact Form and other improvements
- Added contact form feature with Basin
- Added page for redirect after form submit
- Text translations
- CSS atributes for future brand zoom hover
- Encapsualated HEAD tag

--- a/css/main.css
+++ b/css/main.css
@@ -44,3 +44,24 @@ body, html {
 .pink,.hover-pink:hover {
     background-color:#F9BBD0!important
 }
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+.success-wrapper {
+    padding-top:64px!important;
+}
+
+.brand {
+    transition: transform .2s;
+}
+
+.brand:hover {
+    -ms-transform: scale(1.5); /* IE 9 */
+    -webkit-transform: scale(1.5); /* Safari 3-8 */
+    transform: scale(1.1); 
+}
